@@ -1,5 +1,5 @@
 AUX configure.py.patch 1727 RMD160 31802058d0b0488264cdbcfeebd7ce9aff250957 SHA1 df4fee27f1486422b25d0072cfc388b207814c8f SHA256 06ee44a9fe43615b6bfada4aa7294303c016fd7c378ddf537823e33546306926
 DIST PyQt-x11-gpl-4.5.3-snapshot-20090724.tar.gz 6843221 RMD160 4eb6e41c7a3d63436f5f8566b766db67f7efce09 SHA1 cef5294a5a04c75b69a0853dde9e5b1bc0d18c48 SHA256 73a883c1b40fba38a1d635ced8a2a82fe4fed80462643378f1c36147f5e15a9e
-EBUILD PyQt4-4.5.3_pre20090724.ebuild 3222 RMD160 5a31ecbfe42d08019d914dfbb51f072f8e40f61c SHA1 4713ce0c19bd48538e1dd8e070e0eed55088e132 SHA256 318e52f9241465abee1334a891dd5da0a3e1decee514a882f31194759e1596b7
-MISC ChangeLog 7387 RMD160 b92a5fdf57eac76cf09408e52857882290e3cfac SHA1 889dfc20212cdcdb137e5bc1ae651a95f2e203de SHA256 bb45611ac1d92bbdb8ffc0217317a612f3accbb800906c521e00e75b61977257
+EBUILD PyQt4-4.5.3_pre20090724.ebuild 3374 RMD160 3d1a5ebaef8fce84356847f2577f3cbdf4db29eb SHA1 101cb39299cc57b26d48de8cc5fef415fa9e48f5 SHA256 04785aae037f8e467b4dfbcd995b49063c1d9c18f146ed91716825c2ce181644
+MISC ChangeLog 7617 RMD160 8292fc998fd2046972e534c2ca833e0080b0ad4e SHA1 38c94dbe8e4a78a043f4b8ec93489c2169e9cb42 SHA256 4d2d9a62f062b21ca8c919f1e72af17d80603bb3dd0936337da3aee0e16974e1
 MISC metadata.xml 642 RMD160 0a9271db6e18561fdd834d054186fbb0445fc19b SHA1 27ab2a924dff45be4cef4efaa01a67bbe3bff2c7 SHA256 002a5a6bb12da2ef8b9e7b22541922ff4e92d7c1ae1d82c29bbd2c6c7faeb91c
