@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Jul 2009; Davide Pesavento <davidepesa@gmail.com>
+  PyQt4-4.5.3_pre20090724.ebuild:
+  Respect CC, CXX and LINK when building modules. Respect {C,CXX,LD}FLAGS
+  when debug is enabled too. Properly fix rpath issues in QtCore.
+
 *PyQt4-4.5.3_pre20090724 (25 Jul 2009)
 
   25 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
